Fixing spacing between name

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -136,8 +136,8 @@ dfn {
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
-  margin-bottom: 0.1em;
-  margin-top: 0.1em;
+  margin-bottom: -0.2em;
+  margin-top: 0em;
 
 }
 
